tests/neg/i7013c.scala
import quoted._

def foo() given QuoteContext = {
  type C
  '[C] // error
}
